fix array list files